# catkin_delir

./: .gitignore  CMakeLists.txt  Readme.md  build.sh  config.toml  create_catkin_workspace.sh  delir.launch  package.xml  start.sh
audio/: add_noise.sh
automatedResults/: resultsPrinter.py
automatedResults/pocketSphinxResults/logicQuestionResults/: CAMICU_L_langsam-0.txt  CAMICU_L_langsam-18.txt  CAMICU_L_langsam-27.txt  CAMICU_L_langsam-36.txt  CAMICU_L_langsam-45.txt  CAMICU_L_langsam-54.txt  CAMICU_L_langsam-63.txt  CAMICU_L_langsam-72.txt  CAMICU_L_langsam-81.txt  CAMICU_L_langsam-9.txt  CAMICU_L_mittel-1.txt  CAMICU_L_mittel-10.txt  CAMICU_L_mittel-19.txt  CAMICU_L_mittel-28.txt  CAMICU_L_mittel-37.txt  CAMICU_L_mittel-46.txt  CAMICU_L_mittel-55.txt  CAMICU_L_mittel-64.txt  CAMICU_L_mittel-73.txt  CAMICU_L_mittel-82.txt  CAMICU_L_schnell-11.txt  CAMICU_L_schnell-2.txt  CAMICU_L_schnell-20.txt  CAMICU_L_schnell-29.txt  CAMICU_L_schnell-38.txt  CAMICU_L_schnell-47.txt  CAMICU_L_schnell-56.txt  CAMICU_L_schnell-65.txt  CAMICU_L_schnell-74.txt  CAMICU_L_schnell-83.txt  CAMICU_M_langsam-12.txt  CAMICU_M_langsam-21.txt  (+58 more)
scripts/: AbstractSpeechTranscriber.py  DummyPublisher.py  LOGLEVEL.py  LogHandler.py  audioConverter.py  main.py  network_transcriber.py  pocket_sphinx_transcriber.py  vosk_transcriber.py
voice_recognition_rs/: Cargo.toml  config.toml  download_models.sh  rust-toolchain.toml
voice_recognition_rs/src/: audio_conversion.rs  audio_source.rs  config.rs  main.rs  noise_suppression.rs  speech_recognition.rs  sr_pocketsphinx.rs  sr_vosk.rs
(+238 files in other folders)
