[package]
name = "voice_recognition_rs"
version = "0.2.0"
edition = "2021"


[features]
default = ["vosk", "localplayback", "noisefilter"]
vosk = ["dep:vosk"]
pocketsphinx = ["dep:pocketsphinx"]
noisefilter = ["nnnoiseless"]
localplayback = ["minimp3"]

[dependencies]
enum-display-derive = "0.1.1"
crossbeam-channel = "0.5.6"
libpulse-binding = "2.25.0"
libpulse-simple-binding = "2.25.0"
toml = "0.7.0"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.vosk]
version = "0.2.0"
optional = true

[dependencies.pocketsphinx]
version = "0.6.0"
optional = true

[dependencies.coqui-stt]
version = "1.0.2"
optional = true

[dependencies.nnnoiseless]
version = "0.5.1"
optional = true

[dependencies.minimp3]
version = "0.5.1"
optional = true
